fix: Created comment input model
